--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>TEST</title>
 </head>
 <body>
-    <h1>kuy</h1>
-    <p>ควาย</p>
+    <h1>อีเหี้ย</h1>
+    <p>ควายPUMA</p>
 </body>
 </html>
